--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preload" href="two-services.webp" as="image">
     <link rel="preload" href="uniblog.webp" as="image">
     <link rel="preload" href="magnifier.svg" as="image">
+    <script src="script.js" defer></script>
 
     <title>Portfolio</title>
 </head>
